--- a/style.css
+++ b/style.css
@@ -195,16 +195,17 @@ header ul {
   padding-top: 100px;
 }
 
-
-
-/* wonder-explanation */
-
 .wonder span {
   font-family: Georgia, serif;
   border-bottom: 1px solid #72baf9;
   color: #72baf9;
   letter-spacing: 3px;
 }
+
+
+
+/* wonder-explanation */
+
 
 .wonder-explanation--1 {
   margin: 80px 0 20px;
@@ -225,8 +226,7 @@ header ul {
 
 .explanation--1 {
   width: 360px;
-  /* height: 220px; */
-  padding: 50px 0;
+  padding: 50px;
   text-align: left;
   border: 1px solid rgb(246, 252, 255);
   background: rgb(246, 252, 255);
@@ -267,7 +267,7 @@ header ul {
 
 .explanation--2 {
   width: 360px;
-  padding: 60px 0;
+  padding: 50px;
   text-align: left;
   border: 1px solid rgb(246, 252, 255);
   background: rgb(246, 252, 255);
@@ -291,11 +291,11 @@ header ul {
 /* check-list */
 
 .list-text h6 {
-  margin: 100px auto;
+  margin: 40px auto;
   font-family: Georgia, serif;
   font-size: 28px;
   color: aliceblue;
-  width: 400px;
+  width: 500px;
   height: 80px;
   text-align: center;
   background-image: linear-gradient(90deg, #f08122, #ffd56c 100%, #f8ab47);
@@ -320,8 +320,8 @@ header ul {
 }
 
 .list--1 li {
-  /* padding: 10px 40px; */
-  width: 400px;
+  padding: 10px 0;
+  width: 500px;
   border-bottom: .8px solid gray;
 }
 
@@ -343,10 +343,6 @@ footer ul{
   display: flex;
   gap: 24px;
   justify-content: center;
-}
-
-footer li{
-  
 }
 
 footer small{
