--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ header {
 header img {
   width: 10%;
   height: 20px;
+  padding-left: 10px;
 }
 
 header ul {
@@ -62,14 +63,15 @@ header ul {
 .top--img {
   width: 68%;
   height: 530px;
+  justify-content: right;
   object-fit: cover;
   border-radius: 50px 0 0 0;
   z-index: 0;
 }
 
 .main-title {
-  width: 500px;
-  margin-left: 200px;
+  width: 430px;
+  padding-left: 50px
 }
 
 .main-title img {
@@ -147,7 +149,7 @@ header ul {
 .answer h2 {
   letter-spacing: 10px;
   padding: 16px 0;
-  font-size: 40px;
+  font-size: 30px;
   font-family: Georgia, serif;
 }
 
@@ -157,7 +159,7 @@ header ul {
   position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
-  top: 1400px;
+  top: 1300px;
   left: 350px;
   z-index: -1;
 }
@@ -168,8 +170,8 @@ header ul {
   position: absolute;
   background-repeat: no-repeat;
   background-size: cover;
-  top: 1600px;
-  left: 700px;
+  top: 1590px;
+  left: 720px;
   z-index: 0;
 }
 
