--- a/style--more.css
+++ b/style--more.css
@@ -137,7 +137,8 @@ body {
     background-image: radial-gradient(at 10% 64%, #ff9b00, #46d9ff 99%, #ffd56c);
     position: absolute;
     top: 310px;
-    width: 40%;
+    width: 43%;
+    height: 287px;
     aspect-ratio: 2/1;
     opacity: .2;
     z-index: -1;
@@ -149,7 +150,7 @@ body {
     top: 1050px;
     right: 0;
     width: 70%;
-    height: 450px;
+    height: 380px;
     aspect-ratio: 1.5/1;
     opacity: .2;
     z-index: -1;
@@ -158,7 +159,7 @@ body {
   .gradation-3 {
     background-image: radial-gradient(at 10% 80%, #ffe033 13%, #ff48bc);
     position: absolute;
-    top: 1520px;
+    top: 1500px;
     left: 0;
     width: 70%;
     height: 340px;
@@ -285,42 +286,14 @@ body {
 
 
 /* タブレットまで */
-@media (min-width:429px) {
+@media (max-width:429px) {
 
   body {
     overflow-x: hidden;
   }
 
-  .sp--top--img {
-    width: 100%;
-  }
-
-  .main-title {
-    margin-left: 50px;
-  }
-
   .sp--top-wrap {
     padding: 0 30px;
-  }
-
-  .answer-img1 {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    position: absolute;
-    top: 1350px;
-    left: -100px;
-  }
-
-  .answer-img2 {
-    width: 70%;
-    position: absolute;
-    top: 1570px;
-    left: 200px;
-  }
-
-  .wonder{
-    margin-top: 700px;
   }
 
   .explanation--1 span {
@@ -330,14 +303,52 @@ body {
   .explanation--2 span {
     font-size: 15px;
   }
-/* 
-  .list-text h6{
-    width: 100%;
-    max-width: 0;
-  } */
+}
 
-  footer img{
+
+@media (min-width:429px) {
+
+  body {
+    overflow-x: hidden;
+  }
+
+  .sp--top--img {
+    width: 65%;
+  }
+
+  .main-title {
+    padding-left: 40px
+  }
+
+  .answer-img1 {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+    position: absolute;
+    top: 1150px;
+    left: -100px;
+  }
+
+  .answer-img2 {
+    width: 70%;
+    position: absolute;
+    top: 1360px;
+    left: 200px;
+  }
+
+  .wonder {
+    margin-top: 650px;
+  }
+
+  footer img {
     width: 28%;
   }
-  
+
+  footer li {
+    font-size: 12px;
+  }
+
+  footer small {
+    font-size: 10px;
+  }
 }
