--- a/style--more.css
+++ b/style--more.css
@@ -111,17 +111,17 @@ body {
     background: gray;
   }
 
-  .answer-img1 {
+  .answer-img1--pc {
     width: 30%;
     position: absolute;
-    top: 1400px;
+    top: 1250px;
     left: 350px;
   }
 
-  .answer-img2 {
+  .answer-img2--pc {
     width: 30%;
     position: absolute;
-    top: 1600px;
+    top: 1500px;
     left: 730px;
   }
 
@@ -132,6 +132,7 @@ body {
   .answer-img2 {
     display: none;
   }
+
 
   .gradation {
     background-image: radial-gradient(at 10% 64%, #ff9b00, #46d9ff 99%, #ffd56c);
@@ -196,6 +197,7 @@ body {
   .sp--top--img {
     width: 100%;
     border-radius: 0 30px 0 0;
+    
   }
 
 
@@ -235,6 +237,18 @@ body {
   .answer-img2--pc {
     display: none;
   }
+
+  .answer-img1 {
+    display: none;
+  }
+
+  .answer-img2 {
+    width: 100%;
+    position: absolute;
+    top: 1150px;
+    opacity: .7;
+  }
+
 
   .wonder {
     height: 1050px;
@@ -316,30 +330,15 @@ body {
     width: 65%;
   }
 
-  .main-title{
+  .main-title {
     width: 300px;
   }
 
-  .answer-img1 {
-    width: 100%;
-    height: 250px;
-    object-fit: cover;
-    position: absolute;
-    top: 1150px;
-    left: -100px;
+
+  .wonder p {
+    font-size: 12px;
   }
 
-  .answer-img2 {
-    width: 70%;
-    position: absolute;
-    top: 1360px;
-    left: 200px;
-  }
-
-  .wonder {
-    margin-top: 600px;
-  }
-  
 
   footer img {
     width: 28%;
