--- a/style--more.css
+++ b/style--more.css
@@ -195,9 +195,9 @@ body {
   }
 
   .sp--top--img {
-    width: 100%;
+    width: 70%;
     border-radius: 0 30px 0 0;
-    
+
   }
 
 
@@ -300,7 +300,7 @@ body {
 
 
 /* タブレットまで */
-@media (max-width:429px) {
+@media (min-width:429px) {
 
   body {
     overflow-x: hidden;
@@ -327,7 +327,7 @@ body {
   }
 
   .sp--top--img {
-    width: 65%;
+    width: 50%;
   }
 
   .main-title {
