--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ header ul {
 .main-title img {
   width: 100px;
   opacity: .8;
-  margin-left: -40px;
+  margin-left: -20px;
 }
 
 .main-title h2 {
@@ -336,9 +336,9 @@ footer{
   padding: 30px 0 10px;
 }
 
-footer img{
+/* footer img{
   width: 16%;
-}
+} */
 
 footer ul{
   margin: 24px auto 16px;
