--- a/style--more.css
+++ b/style--more.css
@@ -111,6 +111,10 @@ body {
     background: gray;
   }
 
+.answer{
+  margin-bottom: 600px;
+}
+
   .answer-img1--pc {
     width: 30%;
     position: absolute;
@@ -131,6 +135,10 @@ body {
 
   .answer-img2 {
     display: none;
+  }
+
+  .wonder p{
+    padding-top: 30px;
   }
 
 
@@ -244,20 +252,13 @@ body {
 
   .answer-img2 {
     width: 100%;
+    height: 300px;
+    object-fit: cover;
     position: absolute;
     top: 1150px;
     opacity: .7;
   }
-
-
-  .wonder {
-    height: 1050px;
-    margin-top: 500px;
-    text-align: center;
-    background-image: url(img/IMG_3381.PNG);
-    background-size: 100%;
-    object-fit: cover;
-  }
+ 
 
   .wonder P {
     padding: 24px 0;
@@ -295,7 +296,7 @@ body {
     justify-content: center;
   }
 
-  footer img{
+  footer img {
     width: 16%;
   }
 
@@ -303,8 +304,65 @@ body {
 
 
 
+@media (max-width:767px){
+
+  .sp--top--img{
+    width: 70%;
+  }
+
+  .main-title{
+    width: 300px;
+  }
+
+  .answer-img2{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+  }
+
+  .wonder{
+    margin-top: -240px;
+    padding-bottom: -300px;
+  }
+
+  .explanation--1{
+    margin: -70px 0;
+  }
+
+
+
+}
+
+
+
+
+@media (min-width:768px){
+
+  .answe{
+    margin: 80px 0 -300px;
+  }
+
+  .wonder{
+    margin-top: -240px;
+  }
+  
+  .wonder-explanation--1 {
+    margin: -10px 0 -60px;
+  }
+
+}
+
+
+
+
+
 /* タブレットまで */
 @media (max-width:429px) {
+
+  .answe{
+    margin-bottom: -40px;
+  }
+
 }
 
 
@@ -318,6 +376,24 @@ body {
     padding: 0 30px;
   }
 
+
+  .main-title {
+    width: 260px;
+  }
+
+  .sp--top--img {
+    width: 50%;
+  }
+
+
+  .wonder h4{
+    margin-bottom: -17px;
+  }
+
+  .wonder p {
+    font-size: 12px;
+  }
+
   .explanation--1 span {
     font-size: 15px;
   }
@@ -326,26 +402,13 @@ body {
     font-size: 15px;
   }
 
-  .sp--top--img {
-    width: 50%;
-  }
-
-  .main-title {
-    width: 300px;
-  }
-
-
-  .wonder p {
-    font-size: 12px;
-  }
-
 
   footer img {
-    width: 28%;
+    width: 40%;
   }
 
   footer li {
-    font-size: 12px;
+    font-size: 10px;
   }
 
   footer small {
