--- a/style--more.css
+++ b/style--more.css
@@ -363,6 +363,19 @@ body {
     margin-bottom: -40px;
   }
 
+  footer li {
+    font-size: 10px;
+  }
+
+  footer small {
+    font-size: 10px;
+  }
+
+  .check-list{
+    width: 100%;
+    justify-content: center;
+  }
+
 }
 
 
@@ -402,16 +415,14 @@ body {
     font-size: 15px;
   }
 
+  .check-list{
+    width: 100%;
+    justify-content: center;
+  }
+
 
   footer img {
     width: 40%;
   }
 
-  footer li {
-    font-size: 10px;
-  }
-
-  footer small {
-    font-size: 10px;
-  }
 }
