--- a/style--more.css
+++ b/style--more.css
@@ -325,8 +325,16 @@ body {
     padding-bottom: -300px;
   }
 
+  .wonder p{
+    margin-top: 20px;
+  }
+
   .explanation--1 {
-    margin: -70px 0;
+    margin-top: -80px;
+  }
+
+  .explanation--2 {
+    margin-top: -60px;
   }
 
 
@@ -368,8 +376,8 @@ body {
   }
 
   .check-list {
-    width: 100%;
-    justify-content: center;
+    width: 50%;
+    margin: 0 auto;
   }
 
   footer li {
