--- a/style.css
+++ b/style.css
@@ -297,7 +297,7 @@ header ul {
   font-family: Georgia, serif;
   font-size: 28px;
   color: aliceblue;
-  width: 500px;
+  width: 50%;
   height: 80px;
   text-align: center;
   background-image: linear-gradient(90deg, #f08122, #ffd56c 100%, #f8ab47);
