--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ header ul {
   padding-bottom: 20px;
   width: 100%;
   text-align: center;
-  background-image: url(img/IMG_3381.PNG);
+  background-image: url(img/background.webp);
   background-size: 100%;
   object-fit: cover;
 }
