--- a/marketing.css
+++ b/marketing.css
@@ -295,9 +295,6 @@ body {
     font-size: 12px;
   }
 
-  .list--1 p {
-    justify-content: center;
-  }
 
   footer img {
     width: 16%;
@@ -387,19 +384,19 @@ body {
   .list-text h6 {
     font-size: 16px;
     width: 300px;
-    height: 40px;
+    height: 50px;
   }
 
-  .list--1 p {
+  .list-1 p {
     font-size: 14px;
   }
 
-  .list--1 li {
+  .list-1 li {
     font-size: 13px;
     width: 400px;
   }
 
-  .list--1 img {
+  .list-1 img {
     font-size: 13px;
   }
 
