--- a/style.css
+++ b/style.css
@@ -302,17 +302,17 @@ header ul {
   background-image: linear-gradient(90deg, #f08122, #ffd56c 100%, #f8ab47);
 }
 
-.list--1 {
+.list-1 {
   width: 500px;
   height: 600px;
   margin: 50px auto 0;
 }
 
-.list--1 img {
+.list-1 img {
   width: 40px;
 }
 
-.list--1 p {
+.list-1 p {
   margin: 20px auto;
   font-family: Georgia, serif;
   font-size: 24px;
@@ -320,7 +320,7 @@ header ul {
   text-align: center;
 }
 
-.list--1 li {
+.list-1 li {
   padding: 10px 0;
   width: 500px;
   border-bottom: .8px solid gray;
