--- a/style.css
+++ b/style.css
@@ -208,7 +208,7 @@ header ul {
 /* wonder-explanation */
 
 
-.wonder-explanation--1 {
+.wonder-explanation-1 {
   padding: 80px 0 20px;
   display: block;
   display: flex;
@@ -218,7 +218,7 @@ header ul {
   align-items: last baseline;
 }
 
-.wonder-explanation--1 img {
+.wonder-explanation-1 img {
   width: 40%;
   height: 320px;
   object-fit: cover;
@@ -246,7 +246,7 @@ header ul {
   margin-bottom: 10px;
 }
 
-.wonder-explanation--2 {
+.wonder-explanation-2 {
   margin: 60px 0 20px;
   display: block;
   display: flex;
@@ -257,7 +257,7 @@ header ul {
 }
 
 
-.wonder-explanation--2 img {
+.wonder-explanation-2 img {
   margin-top: 30px;
   width: 40%;
   height: 320px;
